# RuSentimentFactors

./: .gitignore  README.md
notebooks/: README.md
notebooks/ru-posts/: emotional_important_words.ipynb
notebooks/ru-text-sentiment/: README.md  keywords_extraction.ipynb  text_preprocessing_eda.ipynb
notebooks/ru-text-sentiment/deep_learning/: README.md  recurent_neural_networks.ipynb  transformers.ipynb
notebooks/ru-text-sentiment/statistical_methods/: README.md  clustering.ipynb  sentiment_analysis_1_gram.ipynb  sentiment_analysis_2_gram.ipynb  sentiment_analysis_3_gram.ipynb
notebooks/visual-sentiment/: README.md  download_data.py  generate_image_captioning.ipynb
notebooks/visual-sentiment/deep_learning/: README.md  base_cnn_models.ipynb  caption_based_image_classification.ipynb  multimodal_model.ipynb  vision_transformer.ipynb
ru-sentiment-app/: .dockerignore  .env  Dockerfile  Pipfile  README.md  config.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  run.py
ru-sentiment-app/deploy/: entrypoint.sh
ru-sentiment-app/models/: __init__.py  common.py  image_caption_generator.py  text_sentiment_model.py  visual_sentiment_model.py
ru-sentiment-app/src/: __init__.py  clickhouse_client.py  enums.py  errors.py  image_preprocessing.py  minio_client.py  ml_sentiment_model.py  schemas.py  services.py  text_preprocessing.py  views.py  vk_api.py
