[tool.poetry]
name = "ru-sentiment-app"
version = "0.1.0"
description = ""
authors = ["Dmitry Bakanov <dima.bakanov.1999@mail.ru>"]
readme = "README.md"
packages = [{ include = "ru_sentiment_app" }]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "1.10.7"
minio = "7.1.14"
loguru = "0.6.0"
fastapi = "0.95.0"
scikit-learn = "1.1.3"
clickhouse-connect = "0.5.18"
transformers = "4.26.1"
opencv-python = "4.7.0.72"
nltk = "3.8.1"
pymystem3 = "0.2.0"
uvicorn = "0.21.1"
beautifulsoup4 = "4.12.0"
python-multipart = "0.0.6"
python-dotenv = "1.0.0"
setuptools = "67.6.1"
pandas = "1.5.2"
lxml = "4.9.1"
yake = "0.4.8"
gunicorn = "20.1.0"


[tool.poetry.group.dev.dependencies]
black = "23.3.0"

[tool.black]
line-length = 120
target-version = ['py39']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
